--- a/package.json
+++ b/package.json
@@ -21,13 +21,11 @@
     "bootstrap": "^5.3.8",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
-    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-chartjs-2": "5.2.0",
     "react-dom": "18.2.0",
-    "react-github-btn": "1.4.0",
     "react-router-dom": "6.11.0",
     "react-scripts": "5.0.1",
     "react-table": "7.8.0",
@@ -41,7 +39,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start"
+    "install:clean": "rm -rf node_modules/ && npm install && npm start"
   },
   "eslintConfig": {
     "extends": [
