--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,7 +28,10 @@ jobs:
         run: npm ci
 
       - name: Lint
-        run: npx eslint src/ --max-warnings 0 || true
+        run: npx eslint src/ --max-warnings 0
+
+      - name: Security audit
+        run: npm audit --audit-level=high
 
       - name: Run tests
         run: npm test -- --watchAll=false --passWithNoTests
