--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "bootstrap": "^5.3.8",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
+    "dompurify": "^3.3.1",
     "jwt-decode": "^4.0.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-chartjs-2": "5.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.11.0",
+    "react-router-dom": "^7.13.0",
     "react-scripts": "5.0.1",
     "react-table": "7.8.0",
     "reactstrap": "^9.2.3",
